canadensis_dsdl_frontend/tests/compile_fail/constant_utf8/canadensis/ConstantUtf8.1.0.dsdl

utf8 RAYMOND = 'w'

@sealed
